--- a/projects/quizApp/quiz.css
+++ b/projects/quizApp/quiz.css
@@ -101,7 +101,66 @@ button:disabled {
   background-color: #e0e0e0;
 }
 
-.option.selected {
-  background-color: #0088cc;
-  color: #ffffff;
+/* modal styling */
+/* Modal styles */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; /* Enable scrolling if needed */
+  background-color: rgba(0, 0, 0, 0.4); /* Overlay background */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* Center modal on screen */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.result{
+  display: flex;
+}
+
+.result p{
+ text-align: center;
+  width: 40%;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1.2em;
+  font-weight: bold;
+
+}
+
+h2{
+  text-align: center;
+}
+
+.stats p {
+  width: 40%;
+  text-align: center;
+
+}
+
+.stats{
+  display: flex;
 }
