--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
  .grid-container {
       background-color: lightgray; /* Adding background color to the grid container */
       display: grid;
-      grid-template-columns: repeat(2, 1fr); /* Two columns */
+      grid-template-columns: repeat(1, 1fr); /* Two columns */
       grid-gap: 10px; /* Gap between grid items */
       padding: 10px; /* Padding for the container */
        grid-auto-flow: dense;
@@ -11,6 +11,7 @@
       background-color: white; /* Adding background color to the grid items */
       padding: 20px;
       border: 1px solid gray;
+      text-align: center;
     }
 
     /* For smaller phones */
@@ -30,6 +31,6 @@
 /* For larger tablets and desktops */
 @media (min-width: 769px) {
   .grid-container {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
